# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1330 2013/08/03 10:14:59 zmedico Exp $

*portage-2.2.0_alpha192 (03 Aug 2013)

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha192.ebuild,
  -portage-2.2.0_alpha190.ebuild:
  2.2.0_alpha192 version bump. This includes all of the fixes in 2.1.13.3. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.13.3 (03 Aug 2013)

  03 Aug 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.3.ebuild,
  -portage-2.1.13.1.ebuild:
  2.1.13.3 version bump. This fixes bug #339446 (clarify phase dependency
  handling in ebuild(1) man page), bug #394773 (add fixpackages --help option),
  bug #405783 (cover world file update in emerge(1) man page --noreplace docs),
  and bug #424930 (mention slot atoms in the emerge(1) man page). This also
  fixes a case were a dev-libs/boost update would be skipped unnecessarily
  (triggered by poor choices in conflict handling and backtracking). Bug #472632
  tracks all bugs fixed since portage-2.1.12.2.

  31 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild,
  portage-2.2.0_alpha191.ebuild:
  Generating make.conf PORTDIR setting for backward compatibility.

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild,
  portage-2.2.0_alpha191.ebuild:
  Support git:// in pkg_postinst generated repos.conf.

*portage-2.2.0_alpha191 (30 Jul 2013)

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha191.ebuild:
  2.2.0_alpha191 version bump. This includes all of the fixes in 2.1.13.2. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild:
  Tweak repos.conf logic for bug #478726.

*portage-2.1.13.2 (30 Jul 2013)

  30 Jul 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.13.2.ebuild: