@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1330 2013/08/03 10:14:59 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1331 2013/08/03 21:44:51 zmedico Exp $
+
+  03 Aug 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.12.13.ebuild,
+  -portage-2.2.0_alpha188.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha192 (03 Aug 2013)
 
